# Machine_Learning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  cancer_api.py  digits_api.py  fraud_api.py
examples/: README.md  api_usage.py  quick_start.py  train_custom_model.py
f/: floppy.py  sneak.py
f/Cancer/: README.MD  cancer_classifier.ipynb
f/Card_Fraud/: predict_card_fraud.ipynb
f/Digits/: digits.ipynb
f/Flags/: flags.ipynb
f/Honey/: honey.ipynb  honey_production.ipynb
f/Medical_Insurance/: medical_insurance.ipynb  medical_insurance_.py
f/Raisins/: Classify_Raisins_with_Hyperparameter_Tuning.py  Raisins.ipynb  readme.md
f/Random_Forest/: random_forest.ipynb
f/Wine/: wine_quality.ipynb
f/Wrapper/: wrapper_method_solution.ipynb
f/income_class/: income_class.ipynb
models/: .gitkeep
notebooks/Cancer/: README.MD
notebooks/Card_Fraud/: predict_card_fraud.ipynb  readme.md
notebooks/Digits/: readme.md
notebooks/Flags/: readme.md
notebooks/Honey/: readme.md
notebooks/Medical_Insurance/: readme.md
notebooks/income_class/: income_class.ipynb  readme.md
scripts/: train_cancer_model.py
src/: __init__.py
src/cancer/: __init__.py  cli.py  config.py  data_loader.py  model.py  predictor.py  preprocessor.py
src/digits/: __init__.py  config.py  data_loader.py  model.py  predictor.py  preprocessor.py
src/fraud_detection/: __init__.py  config.py  data_loader.py  model.py  predictor.py  preprocessor.py
tests/: __init__.py  test_cancer_data_loader.py  test_cancer_model.py  test_digits_model.py  test_fraud_detection.py
